--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.13",
     "@nextui-org/react": "^1.0.0-beta.12",
+    "gh-pages": "^5.0.0",
     "lodash": "^4.17.21",
     "next": "latest",
     "next-auth": "^4.18.8",
